make initial changes to the spot_ros2_gazebo project

--- a/spot_ros2_gazebo/CMakeLists.txt
+++ b/spot_ros2_gazebo/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.5)
 
 # Following directive defines the project name.
-project(ros_gz_example_gazebo)
+project(spot_ros2_gazebo)
 
 
 # Following directives find required packages and load their configuration.
 # The 'set' directive defines a variable (e.g. 'GZ_PLUGIN_VER').
 # Such variables can be used lateron in the CMakeLists.txt file.
 find_package(ament_cmake REQUIRED)
-find_package(ros_gz_example_description REQUIRED)
+find_package(spot_ros2_description REQUIRED)
 
 find_package(ignition-cmake2 REQUIRED)
 find_package(ignition-plugin1 REQUIRED COMPONENTS register)
@@ -61,7 +61,7 @@ target_link_libraries(FullSystem PRIVATE
 
 # Following 'install' directive ensures that the compiled libraries
 # of the 'BasicSystem' and 'FullSystem' targets will be copied
-# to the subfolder 'lib/ros_gz_example_gazebo' of the install directory.
+# to the subfolder 'lib/spot_ros2_gazebo' of the install directory.
 install(
   TARGETS BasicSystem FullSystem
   DESTINATION lib/${PROJECT_NAME}
@@ -69,7 +69,7 @@ install(
 
 
 # Following 'install' directive ensures that the 'worlds' subfolder
-# will be copied to the 'share/ros_gz_example_gazebo/worlds'
+# will be copied to the 'share/spot_ros2_gazebo/worlds'
 # subfolder of the installation directory.
 install(
   DIRECTORY worlds/
