--- a/spot_ros2_bringup/CMakeLists.txt
+++ b/spot_ros2_bringup/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ros_gz_example_bringup)
+project(spot_ros2_bringup)
 
 find_package(ament_cmake REQUIRED)
-find_package(ros_gz_example_description REQUIRED)
-find_package(ros_gz_example_gazebo REQUIRED)
+find_package(spot_ros2_description REQUIRED)
+find_package(spot_ros2_gazebo REQUIRED)
 
 # Install project launch files
 install(
