--- a/spot_ros2_description/package.xml
+++ b/spot_ros2_description/package.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros_gz_example_application</name>
+  <name>spot_ros2_description</name>
   <version>0.0.0</version>
-  <description>Application-specific implementations for the ros_gz_project example</description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
+  <description>SDFormat description files for the spot_ros2_gazebo project</description>
+  <maintainer email="ygao@missouri.edu">Yixiang Gao</maintainer>
   <license>Apache 2.0</license>
-  <author>Michael Carroll</author>
-  <author>Dharini Dutia</author>
+  <author>Yixiang Gao</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -17,4 +16,3 @@
     <build_type>ament_cmake</build_type>
   </export>
 </package>
-
