--- a/spot_ros2_gazebo/package.xml
+++ b/spot_ros2_gazebo/package.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros_gz_example_gazebo</name>
+  <name>spot_ros2_gazebo</name>
   <version>0.0.0</version>
-  <description>Gazebo-specific implementations for the ros_gz_example project</description>
-  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
+  <description>Gazebo-specific implementations for the spot_ros2_gazebo project</description>
+  <maintainer email="ygao@missouri.edu">Yixiang Gao</maintainer>
   <license>Apache 2.0</license>
-  <author>Michael Carroll</author>
-  <author>Dharini Dutia</author>
+  <author>Yixiang Gao</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>ros_gz_example_description</depend>
+  <depend>spot_ros2_description</depend>
 
   <test_depend>ament_lint_auto</test_depend>
 
