--- a/spot_ros2_bringup/config/spot_bridge.yaml
+++ b/spot_ros2_bringup/config/spot_bridge.yaml
@@ -1,42 +1,11 @@
 ---
-- ros_topic_name: "/diff_drive/cmd_vel"
-  gz_topic_name: "/model/diff_drive/cmd_vel"
-  ros_type_name: "geometry_msgs/msg/Twist"
-  gz_type_name: "ignition.msgs.Twist"
-  direction: ROS_TO_GZ
 - ros_topic_name: "/clock"
   gz_topic_name: "/clock"
   ros_type_name: "rosgraph_msgs/msg/Clock"
   gz_type_name: "ignition.msgs.Clock"
   direction: GZ_TO_ROS
-- ros_topic_name: "/diff_drive/odometry"
-  gz_topic_name: "/model/diff_drive/odometry"
-  ros_type_name: "nav_msgs/msg/Odometry"
-  gz_type_name: "ignition.msgs.Odometry"
-  direction: GZ_TO_ROS
-- ros_topic_name: "/diff_drive/scan"
-  gz_topic_name: "/scan"
-  ros_type_name: "sensor_msgs/msg/LaserScan"
-  gz_type_name: "ignition.msgs.LaserScan"
-  direction: GZ_TO_ROS
-- ros_topic_name: "/clock"
-  gz_topic_name: "/clock"
-  ros_type_name: "rosgraph_msgs/msg/clock"
-  gz_type_name: "ignition.msgs.Clock"
-  direction: GZ_TO_ROS
-- ros_topic_name: "/joint_states"
-  gz_topic_name: "/world/demo/model/diff_drive/joint_state"
-  ros_type_name: "sensor_msgs/msg/JointState"
-  gz_type_name: "ignition.msgs.Model"
-  direction: GZ_TO_ROS
-- ros_topic_name: "/tf"
-  gz_topic_name: "/model/diff_drive/pose"
-  ros_type_name: "tf2_msgs/msg/TFMessage"
-  gz_type_name: "ignition.msgs.Pose_V"
-  direction: GZ_TO_ROS
-- ros_topic_name: "/tf_static"
-  gz_topic_name: "/model/diff_drive/pose_static"
-  ros_type_name: "tf2_msgs/msg/TFMessage"
-  gz_type_name: "ignition.msgs.Pose_V"
-  direction: GZ_TO_ROS
-
+- ros_topic_name: "/spot/joint_trajectory"
+  gz_topic_name: "/model/spot/joint_trajectory"
+  ros_type_name: "trajectory_msgs/msg/JointTrajectory"
+  gz_type_name: "ignition.msgs.JointTrajectory"
+  direction: ROS_TO_GZ
