--- a/spot_ros2_bringup/config/spot_bridge.yaml
+++ b/spot_ros2_bringup/config/spot_bridge.yaml
@@ -1,11 +1,16 @@
 ---
-- ros_topic_name: "/clock"
-  gz_topic_name: "/clock"
-  ros_type_name: "rosgraph_msgs/msg/Clock"
-  gz_type_name: "ignition.msgs.Clock"
-  direction: GZ_TO_ROS
 - ros_topic_name: "/spot/joint_trajectory"
   gz_topic_name: "/model/spot/joint_trajectory"
   ros_type_name: "trajectory_msgs/msg/JointTrajectory"
   gz_type_name: "ignition.msgs.JointTrajectory"
   direction: ROS_TO_GZ
+- ros_topic_name: "/clock"
+  gz_topic_name: "/clock"
+  ros_type_name: "rosgraph_msgs/msg/Clock"
+  gz_type_name: "ignition.msgs.Clock"
+  direction: GZ_TO_ROS
+- ros_topic_name: "/joint_states"
+  gz_topic_name: "/model/diff_drive/joint_state"
+  ros_type_name: "sensor_msgs/msg/JointState"
+  gz_type_namTOe: "ignition.msgs.Model"
+  direction: GZ_TO_ROS
