--- a/spot_ros2_bringup/config/spot_bridge.yaml
+++ b/spot_ros2_bringup/config/spot_bridge.yaml
@@ -10,7 +10,7 @@
   gz_type_name: "ignition.msgs.Clock"
   direction: GZ_TO_ROS
 - ros_topic_name: "/joint_states"
-  gz_topic_name: "/model/diff_drive/joint_state"
+  gz_topic_name: "/model/spot/joint_state"
   ros_type_name: "sensor_msgs/msg/JointState"
-  gz_type_namTOe: "ignition.msgs.Model"
+  gz_type_name: "ignition.msgs.Model"
   direction: GZ_TO_ROS
