--- a/spot_ros2_gz_controller/package.xml
+++ b/spot_ros2_gz_controller/package.xml
@@ -12,6 +12,7 @@
 
   <depend>rclpy</depend>
   <depend>std_srvs</depend>
+  <depend>sensor_msgs</depend>
   <depend>trajectory_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
