--- a/spot_ros2_bringup/config/spot_bridge.yaml
+++ b/spot_ros2_bringup/config/spot_bridge.yaml
@@ -14,3 +14,8 @@
   ros_type_name: "sensor_msgs/msg/JointState"
   gz_type_name: "ignition.msgs.Model"
   direction: GZ_TO_ROS
+- ros_topic_name: "/tf"
+  gz_topic_name: "/model/spot/pose"
+  ros_type_name: "tf2_msgs/msg/TFMessage"
+  gz_type_name: "ignition.msgs.Pose_V"
+  direction: GZ_TO_ROS
