--- a/spot_ros2_gz_controller/package.xml
+++ b/spot_ros2_gz_controller/package.xml
@@ -14,6 +14,7 @@
   <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
   <depend>trajectory_msgs</depend>
+  <depend>ament_index_python</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
