--- a/spot_ros2_bringup/config/spot_bridge.yaml
+++ b/spot_ros2_bringup/config/spot_bridge.yaml
@@ -19,3 +19,8 @@
   ros_type_name: "tf2_msgs/msg/TFMessage"
   gz_type_name: "ignition.msgs.Pose_V"
   direction: GZ_TO_ROS
+- ros_topic_name: "/spot/odometry"
+  gz_topic_name: "/model/spot/odometry"
+  ros_type_name: "nav_msgs/msg/Odometry"
+  gz_type_name: "ignition.msgs.Odometry"
+  direction: GZ_TO_ROS
